[package]
name = "pallet-ip-onchain-rpc"
version = "0.1.0"
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
scale-codec = { features = ["derive"], workspace = true }
jsonrpsee = { workspace = true, features = ["macros", "server"] }

serde = { workspace = true }
serde_json = { workspace = true }

polkadot-sdk = { workspace = true, features = [
    "sp-blockchain",
    "sp-api",
    "sp-runtime",
] }

# local packages
pallet-ip-onchain-runtime-api = { workspace = true }

[features]
default = ["std"]
std = ["pallet-ip-onchain-runtime-api/std", "polkadot-sdk/std"]
