[package]
name = "pallet-ip-onchain-runtime-api"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Runtime API."

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
scale-codec = { features = ["derive"], workspace = true }
serde = { workspace = true }

polkadot-sdk = { workspace = true, features = ["sp-api", "sp-runtime"] }

pallet-ip-onchain = { workspace = true }

[features]
default = ["std"]
std = ["scale-codec/std", "polkadot-sdk/std", "pallet-ip-onchain/std"]
